--- a/notes/week9/reg-toolkit.ipynb
+++ b/notes/week9/reg-toolkit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dc22367c",
+   "id": "24e7185a",
    "metadata": {},
    "source": [
     "# Multiple Linear Regression (MLR)\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "6f12d728",
+   "id": "fc7f6edb",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "b46ac751",
+   "id": "3268c547",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "750c1d3a",
+   "id": "1b172b90",
    "metadata": {},
    "outputs": [
     {
@@ -256,19 +256,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c215b5ec",
+   "id": "6802692a",
    "metadata": {},
    "source": [
     "# Interaction\n",
     "Let's add an interaction term between GPA and gender:\n",
     "\n",
-    "$$ y = \\beta_0 + \\beta_1 x_1 + \\beta_2 x_2 + \\beta_3(x1 \\cdot x2) + \\epsilon $$"
+    "$$ y = \\beta_0 + \\beta_1 x_1 + \\beta_2 x_2 + \\beta_3(x_1 \\cdot x_2) + \\epsilon $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "685c4c70",
+   "id": "3f4fe18a",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "b602c033",
+   "id": "0f040339",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "285b0cca",
+   "id": "9bf3c32a",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "a7758104",
+   "id": "54815898",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "3dcfb10e",
+   "id": "db46dd2a",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "b53a1b34",
+   "id": "f0f42fb6",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "06580cea",
+   "id": "acfb44e6",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42e5e3b",
+   "id": "a6f152d8",
    "metadata": {},
    "source": [
     "# More categorical vars?\n",
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "2ebdcc31",
+   "id": "4fa0b544",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "aac3843f",
+   "id": "d07ffdfd",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ccb186",
+   "id": "4b12c1d1",
    "metadata": {},
    "source": [
     "# Panel Data?\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "id": "0d155ea3",
+   "id": "b0d5e37a",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
-   "id": "859184de",
+   "id": "ff8aad62",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "id": "32d9fe0b",
+   "id": "37630e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "31d89795",
+   "id": "e7d3d574",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2a4fbb",
+   "id": "04c296dc",
    "metadata": {},
    "source": [
     "# Non-linear (parametric) fit?\n",
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "6c249f9d",
+   "id": "5e7b029c",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "90e74d3e",
+   "id": "f1ec37b6",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "1dd132da",
+   "id": "a82c8df4",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 449,
-   "id": "58e8edfb",
+   "id": "01b25571",
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 447,
-   "id": "4425efe8",
+   "id": "c6949bee",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 451,
-   "id": "a0dd8566",
+   "id": "8f7b8ca9",
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ed0316",
+   "id": "0107c4a7",
    "metadata": {},
    "outputs": [],
    "source": []
